[project]
name = "boston311scraping"
version = "0.1.0"
description = "We're polling Boston 311 and throwing what we find a table. They can't stop us."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "infra",
    "opentelemetry-sdk>=1.40.0",
    "polling",
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "ERA",
    "BLE",
    "FBT",
    "B",
    "A",
    "C4",
    "DTZ",
    "T10",
    "INT",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "T20",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "PTH",
    "I",
    "E",
    "W",
    "FURB",
    "RUF",
    "TRY"
]
ignore = [
    "TRY003",
    "TRY002",
    "S101"
]

[tool.mypy]
mypy_path = [
    "shared/src",
    "polling/src",
    "infra/src",
]

[tool.pytest.ini_options]
pythonpath = [
    "shared/src",
    "polling/src",
    "infra/src",
]
norecursedirs = ["cdk.out"]
markers = ["integration: marks tests as integration tests"]

[tool.uv.workspace]
members = [
    "infra",
    "polling",
    "shared",
]

[tool.uv.sources]
polling = { workspace = true }
infra = { workspace = true }
shared = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "mypy>=1.19.1",
    "cdk-nag>=2.37.55",
    "types-requests>=2.32.4.20260107",
]

