[project]
name = "polling"
version = "0.1.0"
description = "We're polling Boston 311 and throwing what we find a table. They can't stop us."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools[all]>=3.24.0",
    "opentelemetry-api>=1.40.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
