[project]
name = "polling"
version = "0.1.0"
description = "We're polling Boston 311 and throwing what we find a table. They can't stop us."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools[all]>=3.24.0",
    "opentelemetry-api>=1.40.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "boto3-stubs[sns,sqs]>=1.42.68",
    "moto[sns,sqs]>=5.1.22",
]
