[project]
name = "shared"
version = "0.1.0"
description = "Shared code for lambda functions in the boston311 project"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[project.scripts]
shared = "shared:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
